grammar.js
    source_file: $ => repeat($._statement),

    identifier: $ =>
      prec.right(
        PREC.OBJ_ACCESS,
        seq(
          /[_\p{XID_Start}][-_\p{XID_Continue}]*/,
          optional(
            seq(
              $._dot,
              sep1(
                choice(/[_\p{XID_Start}][-_\p{XID_Continue}]*/, "*"),
                $._dot,
              ),
            ),
          ),
        ),
      ),

    //
    // Literals
    //

    integer_literal: _ => /[0-9]+/,
    true: _ => kw("TRUE"),
    false: _ => kw("FALSE"),
    character_literal: $ =>
      prec.right(
        PREC.OBJ_ACCESS,
        seq($._character_literal, optional($.character_modifier)),
      ),

    //
    // Types
    //

    _expression: $ =>
      choice(
        // $.assignment_expression,
        $.binary_expression,
        $.if_expression,
        $._primary_expression,
        $.unary_expression,
      ),

    assignment_expression: $ =>
      prec.right(
        PREC.ASSIGN,
        seq(
          choice(
            $.identifier,
            $.reference_attribute,
            $.array_access,
            $.builtin_function,
          ),
          choice("=", "+=", "-=", "*=", "/="),
          $._expression,
        ),
      ),

    binary_expression: $ =>
      choice(
        ...[
          [">", PREC.REL],
          ["<", PREC.REL],
          [">=", PREC.REL],
          ["<=", PREC.REL],
          [kw("LT"), PREC.EQUALITY],
          [kw("GT"), PREC.EQUALITY],
          [kw("LE"), PREC.EQUALITY],
          [kw("GE"), PREC.EQUALITY],

          ["=", PREC.EQUALITY],
          ["<>", PREC.EQUALITY],
          [kw("EQ"), PREC.EQUALITY],
          [kw("NE"), PREC.EQUALITY],

          [kw("AND"), PREC.AND],
          [kw("OR"), PREC.OR],

          ["+", PREC.ADD],
          ["-", PREC.ADD],

          ["*", PREC.MULT],
          ["/", PREC.MULT],
          [kw("MOD"), PREC.MULT],
        ].map(([operator, precedence]) =>
          prec.left(precedence, seq($._expression, operator, $._expression)),
        ),
      ),

    _primary_expression: $ =>
      choice(
        $._literal,
        $.identifier,
        $.system_handle,
        $.parenthesized_expression,
        $.reference_attribute,
        $.reference_method,
        $.array_access,
        $.new_object,
        $.builtin_function,
      ),

    reference_method: $ =>
      seq(
        $._primary_expression,
        $._colon,
        choice($.system_handle_method, $.identifier),
        $.argument_list,
      ),

    argument_list: $ =>
      seq(
        "(",
        commaSep(
          seq(
            optional(choice(kw("INPUT"), kw("OUTPUT"), kw("INPUT-OUTPUT"))),
            $._expression,
          ),
        ),
        ")",
      ),

    //
    // System Handles
    //

    _function: $ =>
      prec.right(
        PREC.OBJ_ACCESS,
        seq(
          choice(
            kw("ABSOLUTE"),
            kw("ADD-INTERVAL"),
            kw("ASC"),
            kw("AUDIT-ENABLED"),
            kw("ALIAS"),
            kw("BASE64-DECODE"),
            kw("BASE64-ENCODE"),
            kw("BOX"),
            kw("BUFFER-GROUP-ID"),
            kw("BUFFER-GROUP-NAME"),
            kw("BUFFER-PARTITION-ID"),
            kw("BUFFER-TENANT-ID"),
            kw("BUFFER-TENANT-NAME"),
            kw("CAN-DO"),
            kw("CAN-QUERY"),
            kw("CAN-SET"),
            kw("CAPS"),
            kw("CAST"),
            kw("ENTRY"),
            kw("FILL"),
            kw("INDEX"),
            kw("LENGTH"),
            kw("NUM-ENTRIES"),
            kw("REPLACE"),
            kw("SUBSTRING"),
            kw("USERID"),
            kw("VALID-EVENT"),
            kw("VALID-HANDLE"),
            kw("VALID-OBJECT"),
            kw("WEEKDAY"),
            kw("WIDGET-HANDLE"),
            kw("YEAR"),
          ),
          $.argument_list,
        ),
      ),

    _keyword_function: _ => prec.left(choice(kw("TODAY"), kw("USERID"))),

    _statement_function: $ =>
      choice(
        $._accumulate_function,
        $._ambiguos_function,
        $._available_function,
      ),

    builtin_function: $ =>
      choice(
        $._function,
        $._keyword_function,
        $._statement_function,
        $._canfind_function,
      ),

    _canfind_function: $ =>
      seq(
        kw("CAN-FIND"),
        "(",
        optional(choice(kw("FIRST"), kw("LAST"))),
        $.identifier,
        optional($._literal),
        repeat(
          choice(
            seq(kw("OF"), $.identifier),
            $._where_clause,
            $._useindex_clause,
            seq(
              kw("USING"),
              optional(seq(kw("FRAME"), $.identifier)),
              $.identifier,
              repeat(
                seq(
                  kw("AND"),
                  kw("USING"),
                  optional(seq(kw("FRAME"), $.identifier)),
                  $.identifier,
                ),
              ),
            ),
            $._record_lock,
            kw("NO-WAIT"),
            kw("NO-PREFETCH"),
          ),
        ),
        ")",
      ),

    //
    // Statements
    //

    _statement: $ =>
      choice(
        seq(
          choice(
            $.accumulate_statement,
            $.aggregate_statement,
            $.assign_statement,
            $.apply_statement,

            $.bell_statement,
            $.buffer_compare_statement,
            $.buffer_copy_statement,

            $.call_statement,
            $.case_statement,
            $.compile_statement,

            $.define_buffer_statement,
            $.define_parameter_statement,
            $.define_variable_statement,

            $.do_statement,

            $.error_level_statement,
            $.expression_statement,

            $.procedure_statement,

            $.quit_statement,

            $.run_statement,

            $.use_statement,
            $.using_statement,

            $.validate_statement,
            $.var_statement,
            $.view_statement,

            $.wait_for_statement,
          ),
          $._end_of_statement,
        ),
        alias($._end_of_statement, $.empty_statement),
      ),

    assign_statement: $ =>
      seq(
        kw("ASSIGN"),
        choice(
          repeat1($._assign_spec),
          seq($.identifier, optional(seq(kw("EXCEPT"), repeat1($.identifier)))),
        ),
        optional(kw("NO-ERROR")),
      ),

    _assign_spec: $ =>
      seq($.assignment_expression, optional(seq(kw("WHEN"), $._expression))),

    call_statement: $ => seq(kw("CALL"), repeat1($._primary_expression)),

    case_statement: $ =>
      seq(
        kw("CASE"),
        $._expression,
        $._statement_colon,
        repeat1($._when_spec),
        kw("END"),
        optional(kw("CASE")),
      ),

    _when_spec: $ =>
      seq(
        sep1(seq(kw("WHEN"), $._expression), kw("OR")),
        kw("THEN"),
        $._statement,
      ),

    compile_statement: $ =>
      seq(
        kw("COMPILE"),
        choice(
          $._value,
          // TODO: path
        ),
        anyOf(
          seq(kw("OPTIONS"), $.character_literal),
          seq(
            kw("SAVE"),
            optional(seq("=", $._expression)),
            optional(seq(kw("INTO"), choice($._value))),
          ),
          seq(
            kw("XREF-XML"),
            choice(
              $._value,
              //TODO: path
            ),
          ),
          kw("NO-ERROR"),
        ),
      ),

    expression_statement: $ => choice($._expression, $.assignment_expression),

    do_statement: $ =>
      seq(
        optional(seq($.identifier, $._statement_colon)),
        kw("DO"),
        optional(
          choice(
            seq($.identifier, "=", $._expression, kw("TO"), $._expression),
            seq(kw("WHILE"), $._expression),
            kw("TRANSACTION"),
          ),
        ),
        $._code_block,
      ),

    _code_block: $ => seq($._statement_colon, repeat($._statement), kw("END")),

    _value: $ => seq(kw("VALUE"), "(", $._expression, ")"),
