test/corpus/statement/call_statement.txt
================================================================================
Call Statement
================================================================================

CALL c_func arg1 "arg2".

--------------------------------------------------------------------------------

(source_file
  (call_statement
    (identifier)
    (identifier)
    (character_literal)))
