test/corpus/statement/case_statement.txt
================================================================================
Case Statement
================================================================================

CASE cTest:
  WHEN "this" OR
  WHEN "that" THEN ASSIGN i = 1.

  WHEN "them" THEN DO:
    ASSIGN i = 2.
  END.
END CASE.

--------------------------------------------------------------------------------

(source_file
  (case_statement
    (identifier)
    (character_literal)
    (character_literal)
    (assign_statement
      (assignment_expression
        (identifier)
        (integer_literal)))
    (character_literal)
    (do_statement
      (assign_statement
        (assignment_expression
          (identifier)
          (integer_literal))))))

================================================================================
Somewhat Sketchy Case Statement
================================================================================

CASE TRUE:
  WHEN 1 = 2 THEN DO: END.
  WHEN obj:method() = "value" THEN DO: END.
END.

--------------------------------------------------------------------------------

(source_file
  (case_statement
    (true)
    (binary_expression
      (integer_literal)
      (integer_literal))
    (do_statement)
    (binary_expression
      (reference_method
        (identifier)
        (identifier)
        (argument_list))
      (character_literal))
    (do_statement)))
