test/corpus/statement/class_statement.txt
================================================================================
Class Statement
================================================================================

CLASS Path.To.File:
END CLASS.

--------------------------------------------------------------------------------

(source_file
  (class_statement
    (identifier)))

================================================================================
Detailed Class Statement
================================================================================

CLASS Path.To.File INHERITS Progress.Lang.Object
                   IMPLEMENTS Ccs.Common.IService
                   ABSTRACT:
END CLASS.

--------------------------------------------------------------------------------

(source_file
  (class_statement
    (identifier)
    (identifier)
    (identifier)))
