test/corpus/statement/clear_statement.txt
================================================================================
Clear Statement
================================================================================

CLEAR.
CLEAR FRAME f ALL NO-PAUSE.

--------------------------------------------------------------------------------

(source_file
  (clear_statement)
  (clear_statement
    (identifier)))
