test/corpus/statement/close_query_statement.txt
================================================================================
Close Query Statement
================================================================================

CLOSE QUERY qQuery.

--------------------------------------------------------------------------------

(source_file
  (close_query_statement
    (identifier)))
